package com.dungeondevs.components;

public enum EntityState {
    IDLE,
    RUNNING,
    SLOWING_DOWN
}
