package com.dungeondevs.components;

import com.artemis.Component;

public class EntityStateComponent extends Component {
    public EntityState state;
    public float timeRemainingInCurrentState;
}
