package com.dungeondevs.components;

import com.artemis.Component;

public class InputComponent extends Component {
    public boolean left;
    public boolean right;
    public boolean up;
    public boolean down;
}
