package com.dungeondevs.components;

import com.artemis.Component;

public class MovementSpecsComponent extends Component {
    public float maxSpeedPerSecond;
    public float decelerationPerSecond;
}
