package com.dungeondevs.components;

import com.artemis.Component;
import com.badlogic.gdx.physics.box2d.Body;

public class PhysicsComponent extends Component {
    public Body body;
}
