package com.dungeondevs.components;

import com.artemis.Component;
import com.badlogic.gdx.graphics.g2d.Sprite;
import com.badlogic.gdx.graphics.g2d.TextureRegion;

public class RenderingComponent extends Component {
    public TextureRegion textureRegion;
}
