package com.dungeondevs.components;

import com.artemis.Component;
import com.badlogic.gdx.physics.box2d.World;

public class WorldComponent extends Component {
    public World world;

}
