package com.dungeondevs.systems;

import com.artemis.Entity;
import com.artemis.systems.EntityProcessingSystem;

public class CollisionSystem extends EntityProcessingSystem {
    @Override
    protected void process(Entity e) {

    }
}
