@startuml
/'
******************
    Setups and includes
******************
'/
' skinparam groupInheritance 3

!global $componentClass = com.Artemis.Component
!global $systemClass = com.Artemis.EntitySystem
!global $entityClass = com.Artemis.Entity
!global $artemisWorldClass = com.Artemis.World
!global $box2dWorldClass = com.badlogic.gdx.physics.box2d.World
!global $archetypeClass = com.Artemis.Archetype

!procedure $defineAsComponent($className)
    $componentClass <|-- $className
!endprocedure

!procedure $defineAsSystem($className)
    $systemClass <|-- $className
!endprocedure

!procedure $defineAsEntity($className)
    $entityClass <|-- $className
    $addRelationship($className, $componentClass, $relationship="has", $rightMultiplicity="*", $sign="->")
!endprocedure

!procedure $defineAsArchetype($className)
    $archetypeClass <|-- $className
!endprocedure

!procedure $addRelationship($class1Name, $class2Name, $leftMultiplicity="", $rightMultiplicity="", $sign="->", $relationship="uses", $direction=">", $hide=%false())
    !if %not($hide)
        "$class1Name" $sign "$class2Name" : $leftMultiplicity $relationship $rightMultiplicity
    !endif
!endprocedure

!procedure $addRelationshipsToClass($className, $classes, $leftMultiplicity="", $rightMultiplicity="", $sign="->", $relationship="", $hideRelationships=%false())

    !foreach $class in %splitstr($classes, ",")
        $addRelationship($className, $class, $leftMultiplicity, $rightMultiplicity, $sign, $relationship, ">", $hideRelationships)
    !endfor
!endprocedure

class $artemisWorldClass {

}
!$classes = $entityClass + "," + $componentClass + "," + $systemClass + "," + $archetypeClass
$addRelationshipsToClass($artemisWorldClass, $classes, $rightMultiplicity="*", $sign="->", $relationship="has", $hideRelationships=%false())

class $componentClass {

}

class $systemClass {

}

class $entityClass {
    + id: int
}

class $archetypeClass {

}

/'
******************
    Components
******************
'/
namespace components {
    class PhysicsComponent {
        + body : Body
    }

    class RenderingComponent {
        + sprite : Sprite
    }

    class AnimationComponent {
        + animation : Animation
        + elapasedTime : float
    }

    class InputComponent {
        + left : bool
        + right : bool
        + up : bool
        + down : bool
    }

    class AttackComponent {

    }

    class HealthComponent {

    }

    enum EntityState {
        IDLE
        RUNNING
        SLOWING_DOWN
    }

    class EntityStateComponent {
        + timeRemainingInCurrentState : float
    }

    $addRelationship(EntityStateComponent, EntityState, $leftMultiplicity="1", $rightMultiplicity="1", $sign="*-", $relationship="has state", $direction=">", $hide=%false())

    class MovementSpecsComponent {
        + maxSpeedInMeterPerSecond : float
        + decelarationPerSecond : float
    }

    class WorldComponent {

    }
    $addRelationship(WorldComponent, $box2dWorldClass, $sign="--*", $hide=%false())
}

'******************
$defineAsComponent(PhysicsComponent)
$defineAsComponent(RenderingComponent)
$defineAsComponent(AnimationComponent)
$defineAsComponent(InputComponent)
$defineAsComponent(EntityStateComponent)
$defineAsComponent(MovementSpecsComponent)
$defineAsComponent(WorldComponent)

/'
******************
    Systems
******************
'/
namespace systems {
    class MovementSystem {

    }

    class CollisionSystem {
    }

    class AttackSystem {
    }
    $addRelationship(AttackSystem, AttackComponent, $sign="-->", $relationship="uses", $hide=%false())
    $addRelationship(AttackSystem, HealthComponent, $sign="-->", $relationship="uses", $hide=%false())
    $addRelationship(AttackSystem, PhysicsComponent, $sign="-->", $relationship="uses", $hide=%false())

    /' movement system only act on entities which have all of the following components

    - EntityStateComponent
    - PhysicsComponent
    - InputComponent
    - MovementSpecsComponent
    '/
    $addRelationshipsToClass(MovementSystem, "EntityStateComponent, PhysicsComponent, InputComponent, MovementSpecsComponent", $rightMultiplicity="*", $sign="->", $relationship="only act on", $hideRelationships=%true())

    $addRelationship(MovementSystem, StateManagementSystem, $sign="-->", $relationship="uses", $hide=%false())

    Note top of MovementSystem
    Le systeme de mouvement n'agit que sur les entités ayant à la fois les composants
    suivants (en soit le personnage du joueur est la seul entité sur laquelle il va
    agir):
    - EntityStateComponent
    - PhysicsComponent
    - InputComponent
    - MovementSpecsComponent
    End Note

    class StateManagementSystem {
        + transition(stateComponent: EntityStateComponent, state: EntityState): bool
    }
    $addRelationship(StateManagementSystem, EntityStateComponent, $sign="-->", $relationship="uses", $hide=%false())

    class PhysicsSystem {
        - accumulator: float
        - world: libgdx.box2d.World
    }

    class InputSystem {

    }
    $addRelationship(InputSystem, InputComponent, $sign="-->", $relationship="uses", $hide=%false())
}

'******************
$defineAsSystem(MovementSystem)
$defineAsSystem(StateManagementSystem)
$defineAsSystem(PhysicsSystem)
$defineAsSystem(InputSystem)

'******************
namespace archetypes {

    class PlayerCharacter {
    }
    $addRelationshipsToClass(PlayerCharacter, "EntityStateComponent,PhysicsComponent,RenderingComponent,AnimationComponent,InputComponent,MovementSpecsComponent", $rightMultiplicity="1", $sign="-->", $relationship="has", $hideRelationships=%false())




    $defineAsArchetype(PlayerCharacter)
    Note right of PlayerCharacter
    L'archetype personnage du joueur possède les composants suivant:
    - EntityStateComponent
    - PhysicsComponent
    - RenderingComponent
    - AnimationComponent
    - InputComponent
    - MovementSpecsComponent
    End Note
}
'*****************


class com.dungeondevs.DungeonGame {
}
com.dungeondevs.DungeonGame *-- $artemisWorldClass : posséde > "1"
com.dungeondevs.DungeonGame *-- $box2dWorldClass : posséde > "1"

' hide components
@enduml